# Homework3_Farias

./: CMakeLists.txt  JSONGenerator.hpp  README.md  figs
Include/: Figuras.hpp  Mediciones.hpp  Posicion.hpp  Presion.hpp  ProcesadorFigura.hpp  Punto.hpp  SaveFlightData.hpp
Source/: Figuras.cpp  MedicionBase.cpp  Posicion.cpp  Presion.cpp  SaveFlightData.cpp
ej1/: main1.cpp
ej1/include/: Mediciones.hpp  Posicion.hpp  Presion.hpp  SaveFlightData.hpp
ej1/source/: MedicionBase.cpp  Posicion.cpp  Presion.cpp  SaveFlightData.cpp
ej2/: main2.cpp
ej2/include/: Figuras.hpp  ProcesadorFigura.hpp  Punto.hpp
ej2/source/: Punto.cpp
ej3/: JSONGenerator.hpp  main3.cpp
main/: main.cpp  main1.cpp  main2.cpp
